don't display username/password prompt if guaEnabled

--- a/webapp/cas-server-webapp-resources/src/main/resources/templates/fragments/loginform.html
+++ b/webapp/cas-server-webapp-resources/src/main/resources/templates/fragments/loginform.html
@@ -44,7 +44,7 @@
 								<span th:utext="#{screen.welcome.forcedsso(${guaUsername})}" />
 							</h6>
 						</div>
-                        <h3 th:unless="${existingSingleSignOnSessionAvailable}"
+                        <h3 th:unless="${existingSingleSignOnSessionAvailable || guaEnabled}"
                             style="text-align: center; margin-top:-15px">
                             <i class="fas fa-id-card"></i>
                             <span th:utext="#{screen.welcome.instructions}">Enter your Username and Password:</span>
